@@ -60,21 +60,20 @@ class ContentHelper
 
 		if (empty($articleId) && empty($categoryId)) {
 			$assetName = 'com_content';
-			$level = 'component';
 		}
 		elseif (empty($articleId)) {
 			$assetName = 'com_content.category.'.(int) $categoryId;
-			$level = 'category';
 		}
 		else {
 			$assetName = 'com_content.article.'.(int) $articleId;
-			$level = 'article';
 		}
 
-		$actions = JAccess::getActions('com_content', $level);
+		$actions = array(
+			'core.admin', 'core.manage', 'core.create', 'core.edit', 'core.edit.own', 'core.edit.state', 'core.delete'
+		);
 
 		foreach ($actions as $action) {
-			$result->set($action->name,	$user->authorise($action->name, $assetName));
+			$result->set($action,	$user->authorise($action, $assetName));
 		}
 
 		return $result;
